--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div class="container">
-<h1 class="title">Neon Collab Platform</h1>
+<h1 class="title">Online voting system</h1>
 
 
 <!-- Admin Section -->
